--- a/vision-app-dev/Base.lproj/Main.storyboard
+++ b/vision-app-dev/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3zr-vq-uRq">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8y7-Rx-uC3">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8y7-Rx-uC3" customClass="RoundedShadowView" customModule="vision_app_dev" customModuleProvider="target">
                                         <rect key="frame" x="20" y="30" width="335" height="60"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="CxK-Rp-Am3">
@@ -51,7 +51,7 @@
                                             <constraint firstAttribute="trailing" secondItem="CxK-Rp-Am3" secondAttribute="trailing" constant="8" id="wPu-Q5-RIs"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzo-RM-DRS">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzo-RM-DRS" customClass="RoundedShadowButton" customModule="vision_app_dev" customModuleProvider="target">
                                         <rect key="frame" x="20" y="591" width="85" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -92,6 +92,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cameraView" destination="3zr-vq-uRq" id="cof-pX-K15"/>
+                        <outlet property="captureImageView" destination="la4-pY-43W" id="L68-ct-8BM"/>
+                        <outlet property="confidenceLbl" destination="hSq-oJ-krr" id="5aF-JL-S74"/>
+                        <outlet property="flashBtn" destination="Qzo-RM-DRS" id="GZz-bA-Nai"/>
+                        <outlet property="identificationLbl" destination="wU1-52-pes" id="Y4R-3o-oki"/>
+                        <outlet property="roundedLblView" destination="8y7-Rx-uC3" id="T4Q-2n-1kV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
